--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 buildscript {
-  repositories {
-  mavenCentral()
-  }
-  dependencies {
-    classpath "org.springframework.boot:spring-boot-gradle-plugin:2.2.6.RELEASE"
-  }
+	repositories {
+		maven {
+			url ''
+		}
+		mavenLocal()
+	}
+	dependencies {
+		classpath "org.springframework.boot:spring-boot-gradle-plugin:2.2.7.RELEASE"
+	}
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.2.6.RELEASE'
+	id 'org.springframework.boot' version '2.2.7.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 }
@@ -21,7 +24,10 @@ sourceCompatibility = javaVer
 targetCompatibility = javaVer
 
 repositories {
-	mavenCentral()
+	maven {
+		url ''
+	}
+	mavenLocal()
 }
 
 dependencies {
@@ -29,15 +35,22 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.2'
+	implementation 'org.modelmapper:modelmapper:2.3.7'
+	implementation 'fr.sma.svc.bw:userservice-api:1.0.0'
+	compileOnly 'org.projectlombok:lombok:1.18.12'
+	annotationProcessor 'org.projectlombok:lombok:1.18.12'
+	testCompileOnly 'org.projectlombok:lombok:1.18.12'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 	runtimeOnly 'com.h2database:h2'
+	testImplementation 'org.hamcrest:hamcrest-all:1.3'
 	testImplementation 'junit:junit:4.13'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 }
 
 test {
-	useJUnitPlatform()
 	useJUnit()
 	testLogging.showStandardStreams = true
 	minHeapSize = "128m"
@@ -50,7 +63,8 @@ test {
 	onOutput { descriptor, event ->
 		// logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
 	}
-
+	include 'fr/sma/sy/tests/unit/**'
+	include 'fr/sma/sy/tests/integrations/**'
 
 }
 apply plugin: "org.springframework.boot"
